[metadata]
name = backend.ai-accelerator-cuda
version = attr: ai.backend.accelerator.cuda.__version__
description = Backend.AI Accelerator Plugin for CUDA (Mockup)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = Proprietary
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
setup_requires =
    setuptools>=45.2.0
install_requires =
    attrs>=21.2
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
test =
    pytest>=6.2.1
    pytest-asyncio>=0.14.0
    pytest-cov
    pytest-mock
    codecov
lint =
    flake8>=3.9.0
typecheck =
    mypy>=0.902
dev =
ci =

[options.entry_points]
backendai_accelerator_v20 =
    cuda = ai.backend.accelerator.cuda.plugin:CUDAPlugin

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[build_ext]
inplace=1

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,N801,N802,W504
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
